# cyclops-vision

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
cyclops/: cli.py  config.py
cyclops/adapters/: __init__.py  base.py  detector_base.py  keras_h5.py  onnx_rt.py  torch.py
cyclops/attacks/: __init__.py  base.py  fgsm.py  patch_eot.py  pgd.py
cyclops/datasets/: __init__.py  folder.py
cyclops/defenses/: README.md
cyclops/metrics/: __init__.py  classify.py  detect.py  risk.py
cyclops/report/: __init__.py  html.py  md.py
cyclops/transforms/: __init__.py  base.py  blur.py  compose.py  jpeg.py  resize.py
cyclops/utils/: __init__.py  image.py  seed.py
cyclops_vision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/imagenet_like/: README.txt
scripts/: fetch_real_assets.py  generate_toy.py
tests/: test_adapters.py  test_fgsm.py  test_integration_real.py  test_pgd.py
